# SonATA

./: README  README.md
scripts/: 3beam-dualpol-800KHz-69dx-3zx-env-vars-batch.sh  3beam-dualpol-800KHz-69dx-3zx-env-vars-batch.sh-bf1and3-aug15-2013-jr  BF2-seti000-2-env-var-batch.sh  Makefile.am  antenna-list-master.tcl  beam1and3-env-vars-batch.sh  checklist  configure.ac  jons-exoplanets-for-testing.tcl  observation.tcl  rebuild-sse-pkg-hat-creek.tcsh  reconfig  restart-galcenter.tcl  restart-kepler.tcl  sonata-start-galcenter-2beams-6820-6895-obs.tcl  sonata-start-galcenter-2beams-6970-7045-obs.tcl  sonata-start-kepler-3beams-1400-1750-obs.tcl  sonata-start-test-3beams-8405-8442-obs.tcl  sse100.crontab  sserc.tcl  start.sh
sig-pkg/: configure.ac
sig-pkg/ATApackets/: Makefile.am  configure.ac
sig-pkg/ATApackets/include/: Makefile.am
sig-pkg/ATApackets/src/: Makefile.am
sig-pkg/ATApackets/test/: Makefile.am
sig-pkg/channelizer/: configure.ac  reconfig
sig-pkg/channelizer/include/: Args.h  Transmitter.h
sig-pkg/channelizer/src/: Args.cpp  Beam.cpp  Input.cpp  Makefile.am  Receiver.cpp  Statistics.cpp  Transmitter.cpp  Worker.cpp  commit
sig-pkg/daddLib/: Makefile.am  configure.ac
sig-pkg/daddLib/src/: Makefile.am
sig-pkg/daddLib/test/: Makefile.am
sig-pkg/dfbLib/: Makefile.am  configure.ac
sig-pkg/dfbLib/src/: Makefile.am
sig-pkg/dfbLib/test/: Makefile.am
sig-pkg/dx/: Makefile.am  configure.ac  reconfig
sig-pkg/dx/include/: System.h
sig-pkg/dx/lib/: Args.cpp  Makefile.am
sig-pkg/dx/src/: ArchiverCmdTask.cpp  CwTask.cpp  InputTask.cpp  Makefile.am  PulseConfirmationTask.cpp  PulseTask.cpp  ReceiverTask.cpp  put
sig-pkg/dx/test/: Makefile.am
sig-pkg/gaussLib/: Makefile.am  configure.ac
sig-pkg/gaussLib/src/: Makefile.am
sig-pkg/gaussLib/test/: Makefile.am
sig-pkg/sonataLib/: configure.ac
sig-pkg/sonataLib/src/: Makefile.am
sig-pkg/spectraLib/: configure.ac  reconfig
sig-pkg/spectraLib/src/: Makefile.am
sig-pkg/spectraLib/test/: Makefile.am
sig-pkg/utilities/: configure.ac  reconfig
sig-pkg/utilities/packetchan2beam/: configure.ac
sig-pkg/utilities/packetchan2beam/src/: Makefile.am
sig-pkg/utilities/packetgen/: configure.ac
sig-pkg/utilities/packetgen/src/: Makefile.am
sig-pkg/utilities/packetread/: configure.ac
sig-pkg/utilities/packetread/src/: Makefile.am
sig-pkg/utilities/packetrelay/: configure.ac
sig-pkg/utilities/packetrelay/src/: Args.cpp  Makefile.am
sig-pkg/utilities/packetsend/: configure.ac
sig-pkg/utilities/packetsend/src/: Args.cpp  Makefile.am  Sender.cpp
sig-pkg/utilities/packetsqimport/: configure.ac
sse-pkg/: configure.ac  reconfig
sse-pkg/GPIBInterfaceLib/: Makefile.am
sse-pkg/database/: Makefile.am  create-db-exoplanets6867mhz  create-db-exoplanets7067mhz  create-db-exoplanets8960mhz  create-db-exoplanets8ghz  create-db-galcenter2  create-db-kepler6867mhz  create-db-kepler7067mhz  create-db-kepler8960mhz  create-db-kepler8ghz  create-db-sonata-meta  create-db-sonata-obs  create-db-template  create-db-testdb  create-db-testgrid  db-template-notargets.schema  db-template.schema  seeker.schema  sonata-meta.schema  sonata-obs.schema
sse-pkg/doppler/: Makefile.am  convert-jpl-xyz-data  jon-get-ephems  system-get-ephems
sse-pkg/dxArchiver/: Makefile.am  SignalArchiver.cpp  SignalArchiver.h
sse-pkg/ifc/: Makefile.am
sse-pkg/setup/: Makefile.am  ace.xyz  cassini.xyz  dawn.xyz  deepimpact.xyz  hayabusa2.xyz  juno.xyz  jupiter.xyz  kepler.xyz  ladee.xyz  lro.xyz  moon.xyz  newhorizons.xyz  permRfiMask.tcl  pioneer10.xyz  rosetta.xyz  saturn.xyz  soho.xyz  stereo-a.xyz  stereo-b.xyz  voyager1.xyz
sse-pkg/simulators/chansim/: Makefile.am
sse-pkg/simulators/dxsim/: Makefile.am
sse-pkg/simulators/scienceData/: Makefile.am
sse-pkg/sse/: ActUnitListMutexWrapper.h  ActivityStrategy.cpp  ActivityUnitImp.cpp  CalActStrategy.cpp  CalTargets.cpp  CalTargets.h  DataBlock.h  DbParameters.cpp  DbParameters.h  DebugLog.cpp  DebugLog.h  ExpectedNssComponentsTree.cpp  ExpectedNssComponentsTree.h  Followup.cpp  Makefile.am  MessageBlock.h  MutexBool.h  NssComponentTree.cpp  NssComponentTree.h  NssParameters.i  NssParameterstcl_wrap.cpp-changed  ObsActStrategy.cpp  ObsActStrategy.h  ObserveActivityImp.cpp  ObserveActivityImp.h  ObserveActivityStatus.h  OrderedTargets.cpp  OrderedTargets.h  Scheduler.cpp  SeekerCmdLineParser.cpp  SeekerCmdLineParser.h  Site.cpp  Site.h  TscopeProxy.cpp  findtargets.cpp  readMask.cpp  seeker.cpp  testOrderedTargets.cpp  typescript
sse-pkg/sseChannelizerInterfaceLib/: Makefile.am
sse-pkg/sseDxArchiverInterfaceLib/: Makefile.am
sse-pkg/sseDxInterfaceLib/: Makefile.am
sse-pkg/sseInterfaceLib/: Makefile.am
sse-pkg/sseTscopeInterfaceLib/: Makefile.am
sse-pkg/ssecommutil/: Makefile.am  Verbose.h
sse-pkg/sseutil/: Makefile.am
sse-pkg/tscope/: Makefile.am  Tscope.cpp
sse-pkg/tsig/: Makefile.am
sse-pkg/util/: HzTargetIds  anomoly  extra-db-dumps  galcenter-kepler-progress.sql  galcenter.sql  galcenter2-keplerHz-progress.sh.BAKUP.old  jon.out  jon.sql  keplerHz.sql  myreport.sh
tclreadline/: tclreadline.c  tclreadline.h
