#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])

AC_CONFIG_HEADERS([config.h])
AC_INIT(utilities, 0.1)
AC_CONFIG_SRCDIR(./Makefile.am)
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_RANLIB
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 packetchan2beam/Makefile
                 packetgen/Makefile
                 packetread/Makefile
                 packetrelay/Makefile
                 packetsend/Makefile
                 packetsqimport/Makefile])
#AC_CONFIG_SUBDIRS([ packetchan2beam
#                   packetgen
#                   packetread
#                   packetrelay
#                   packetsend
#                   packetsqimport])
AC_OUTPUT
