noinst_HEADERS = \
                ATADataPacket.h \
                ATADataPacketHeader.h \
                ATAPacket.h \
                basics.h \
                BeamDataPacket.h \
                BeamPacket.h \
                ChannelDataPacket.h \
                ChannelPacket.h

# public headers to include in 'make install' target
#include_HEADERS = $(noinst_HEADERS)
